- Created the feature to delete lock - Added the order status to the lock document - Isolated lock features into it's own service - Major refactorings made
